feat: write new tests for orchestrator methods